@@ -1,0 +1,11 @@
+package rbasamoyai.createbigcannons.base.fabric;
+
+import rbasamoyai.createbigcannons.base.CBCRegistries;
+
+public class CBCRegistriesImpl {
+
+	public static void onClinit() {
+		CBCRegistries.actualInit();
+	}
+
+}
