@@ -26,7 +26,7 @@ public class CreateBigCannonsFabric implements ModInitializer {
         CBCParticleTypes.register();
         CBCSoundEvents.register(AllSoundEvents.SoundEntry::register);
 
-        CBCRegistries.init();
+        CBCRegistries.forceInit();
         CBCConfigs.registerConfigs((t, c) -> ModLoadingContext.registerConfig(CreateBigCannons.MOD_ID, t, c));
 
         CBCNetworkFabric.INSTANCE.initServerListener();
