@@ -1,0 +1,8 @@
+package rbasamoyai.createbigcannons.base.forge;
+
+public class CBCRegistriesImpl {
+
+	public static void onClinit() {
+	}
+
+}
